Details
-
Bug
-
Status: Closed
-
Trivial
-
Resolution: Fixed
-
None
-
None
-
Patch Available
Description
GitHub user sunkehappy opened a pull request:
https://github.com/apache/thrift/pull/471
Some spell errors fix and an website update.
You can merge this pull request into a Git repository by running:
$ git pull https://github.com/sunkehappy/thrift master
Alternatively you can review and apply these changes as the patch at:
https://github.com/apache/thrift/pull/471.patch
To close this pull request, make a commit to your master/trunk branch
with (at least) the following in the commit message:
This closes #471
commit 5735be2cb53ba61171d300e7d69c565d78a887b0
Author: Calvin Sun <675313675@qq.com>
Date: 2015-04-30T06:59:26Z
Some spell errors fix and an website update.