THRIFT-3120 Minor spelling errors and an outdated URL Client: C++ Patch: Calvin Sun <675313675@qq.com>

This closes #471